tolk-tester/tests/invalid-syntax/err-3603.tolk
fun main() {
    var a = 10, b = 20;
}

/**
@compilation_should_fail
@stderr multiple declarations are not allowed
 */
